need to fix spacing because bootstrap is rarted

--- a/public/demos.css
+++ b/public/demos.css
@@ -1,16 +1,16 @@
 body { 
-  background: url(images/coolDemo-bg.jpg) no-repeat center center fixed; 
+  background: url(images/About-bg.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  
 }
 
-.container{
-	color: white;
+.container {
+  background: black;
+  overflow: hidden;
 }
 
-#top {
-	margin-top: 4em;
+#round {
+  border-radius: 3%;
 }
